--- a/index.html
+++ b/index.html
@@ -1,29 +1,15 @@
-
-
 <!DOCTYPE html>
 <html class="gr__birme_net" lang="en">
    <head>
-      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-      <meta charset="UTF-8">
       <title>A.I.R. - Advanced Image Resizer(Online &amp; Free)</title>
       <script type="text/javascript" src="assets/p.js" async=""></script><script type="text/javascript" id="async-buttons" src="assets/async-buttons.js"></script><script id="facebook-jssdk" src="assets/sdk.js"></script><script type="text/javascript" async="" src="assets/ga.js"></script><script src="assets/jquery.js"></script>
       <script src="assets/jquery-ui.js"></script>
       <script src="assets/jszip.js"></script>
       <link rel="stylesheet" href="assets/style.css">
-      <meta property="fb:admins" content="671280598">
-      <meta property="og:title" content="A.I.R - Batch Image Resizing Made Easy">
-      <meta property="og:type" content="website">
-      <meta property="og:url" content="http://birme.net/">
-      <meta property="og:image" content="http://birme.net/images/logo.jpg">
-      <meta property="og:site_name" content="A.I.R">
-      <meta property="og:description" content="BIRME is a flexible and easy to use batch image resizer. It can resize your images to any specific dimensions and crop your images proportionately if necessary. It's an online tool and that means you don't need to download or install anything on your computer. BIRME is absolutely free to use.">
-      <script id="_carbonads_projs" type="text/javascript" src="assets/CVYD42T.js"></script>
       <link rel="stylesheet" type="text/css" href="assets/buttons.css">
-      <script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/get_counts.json"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script><iframe id="stSegmentFrame" name="stSegmentFrame" scrolling="no" sandbox="allow-scripts allow-same-origin" style="display:none;" width="0px" height="0px" frameborder="0"></iframe>
-    
-      </style>
+      <script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/get_counts.json"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script><script type="text/javascript" src="assets/increment_clicks.asc"></script>
    </head>
-   <body data-gr-c-s-loaded="true" cz-shortcut-listen="true">
+   <body data-gr-c-s-loaded="true">
       <div id="main-content" class="page-wide-elements">
          <div style="display:inline-block;float:left">
             <img src="assets/logo.jpg" alt="birme" width="100" height="100">
@@ -121,14 +107,14 @@
       </div>
       <div style="clear:both"></div>
    
-      <div id="contact-info"><a href="http://wewearglasses.com/">©2017</a>&nbsp;,&nbsp; <a href="">FEEDBACK</a></div>
+
       <script src="assets/birme-user-settings.js"></script>
       <script src="assets/birme-utils.js"></script>
       <script src="assets/birme-image-object.js"></script>
       <script src="assets/birme-main.js"></script>
       <script type="text/javascript">var switchTo5x = true;</script>
       <script type="text/javascript" src="assets/buttons.js"></script>
-      <div id="stwrapper" class="stwrapper stwrapper5x stwrapper5x" style="display: none;"><iframe allowtransparency="true" id="stLframe" class="stLframe" name="stLframe" scrolling="no" src="assets/index.html" frameborder="0"></iframe></div>
+      <div id="stwrapper" class="stwrapper stwrapper5x stwrapper5x" style="display: none;"></div>
       <div id="stOverlay" onclick="javascript:stWidget.closeWidget();"></div>
    </body>
 </html>
